--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 			<div class="masthead-home-tagline">
 				<div class>
 					<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a junior@mit, intern@google, and former intern@dropbox. I build things.</h1>
+					<h1 class="animated slideInDown">i'm <strong>stanley</strong>, a junior @ mit studying music &amp; computer science.</h1>
 				</div>
 			</div>
 		</div>
@@ -14,13 +14,13 @@
 <section class="content-wrap" id="about">
 	<div class="body-text">
 		<h1>Who am I?</h1>
-		<p>I'm a junior at MIT (class of 2018), and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting!)
-			programming, and I don't plan on slowing down anytime soon.</p>
+		<p>I'm a junior at the Massachusetts Institute of Technology working towards a major in Computer Science and a minor in Music.
+		I've spent the better part of my life (10+ years and counting!) pursuing both passions, and I don't plan on slowing down anytime soon.</p>
 
-		<p>I've explored and learned a whole lot since then. Game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning&hellip; if you can name it,
-		 I've probably (at least) dabbled in it.</p>
+		<p>I've explored and learned a whole lot since then.
+		In terms of CS, I've tried just about everything I could get my hands on: game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning, security, and distributed systems.</p>
 
-		 <p>Here's a (reverse) timeline of selected milestones in my life as a software engineer:</p>
+		 <p>Here are some notable things I've accomplished as a software engineer:</p>
 	</div>
 	<div class="timeline-wrap">
 		<ul class="timeline">
@@ -166,7 +166,16 @@
 		<p>Like what you see? I'm always looking for cool opportunities. I'd love to <a href="#contact" id='contact-hear'>hear</a> from
 		you!
 		</p>
-		<p>Anyways, outside of that kinda stuff, I like playing the guitar, the piano, and ultimate frisbee. I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch">perfect pitch</a> (1 in ~10,000 people!) and love to play things I hear on the radio by ear.
+		<p>Anyways, outside of that kinda stuff, I really like music.
+		I've played the piano for most of my life, picked up guitar in college, and just recently
+		bought a ukelele! I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch">perfect pitch</a> (1 in ~10,000 people!) and love to play things I hear on the radio by ear.
+		I've also recently become really interested in music theory and compsition!
+		</p>
+		<p>
+		I also like to take pictures from time to time. I shoot on a Nikon D5500 with a 35mm f/1.8 and 18-55mm f/3.5, as well
+		as Galaxy S6. I love the idea of using photos to capture memories forever, and I've
+		had a lot of fun improving upon what I learned in my high school photography class.
+		I hope to upload my photos onto the internet sometime in the future.
 		</p>
 		<p>A blurb about this website &mdash; it starts out as a Sinatra Ruby app and is pumped through a really hacky static site generator I wrote, which is then hosted on GitHub pages. Shoutout to <a href="https://unsplash.com/">Unsplash</a>, <a href="http://masonry.desandro.com/">Masonry</a>, and <a href="http://terrymun.github.io/Fluidbox/">Fluidbox</a> for doing all the hard work for me.</p>
 		<div class="humanstxt">
