--- a/views/main.scss
+++ b/views/main.scss
@@ -874,10 +874,10 @@ ul.timeline {
       top: 0;
       margin: 0 0 0 -25px;
 
-      &:before {
-        content: "\2191";
-        font-size: 2.5rem;
-      }
+      // &:before {
+      //   content: "\2191";
+      //   font-size: 2.5rem;
+      // }
     }
   }
 }
