--- a/views/index.erb
+++ b/views/index.erb
@@ -129,23 +129,6 @@
 			<li>
 				<time>
 					<span>
-						Life
-					</span>
-					<span>
-						2005 &ndash; now
-					</span>
-				</time>
-				<div class="waypoint"></div>
-				<div class="label">
-					<h2>Learning, hacking, building, and more learning</h2>
-					<span class="more">
-						<p>Must. Learn. Everything. Dozens of random side projects.</p>
-					</span>
-				</div>
-			</li>
-			<li>
-				<time>
-					<span>
 						3<sup>rd</sup> grade
 					</span>
 					<span>
@@ -172,12 +155,11 @@
 		I've also recently become really interested in music theory and compsition!
 		</p>
 		<p>
-		I also like to take pictures from time to time. I shoot on a Nikon D5500 with a 35mm f/1.8 and 18-55mm f/3.5, as well
+		I also like to take pictures from time to time. I shoot on a Nikon D5500 with a 35mm f/1.8 prime and 18-55mm f/3.5 zoom, as well
 		as Galaxy S6. I love the idea of using photos to capture memories forever, and I've
 		had a lot of fun improving upon what I learned in my high school photography class.
 		I hope to upload my photos onto the internet sometime in the future.
 		</p>
-		<p>A blurb about this website &mdash; it starts out as a Sinatra Ruby app and is pumped through a really hacky static site generator I wrote, which is then hosted on GitHub pages. Shoutout to <a href="https://unsplash.com/">Unsplash</a>, <a href="http://masonry.desandro.com/">Masonry</a>, and <a href="http://terrymun.github.io/Fluidbox/">Fluidbox</a> for doing all the hard work for me.</p>
 		<div class="humanstxt">
 			<a href="/humans.txt"><img src="/img/logo-humans.png"/></a>
 		</div>
@@ -215,7 +197,7 @@
 				<h1>&hellip;or find me on&hellip;</h1>
 				<ul class='more-contact'>
 					<li><a href="http://github.com/scen">github</a></li>
-					<li><a href="https://www.linkedin.com/in/stanleycen">linkedin</a> (i don't use it <sup><i>yet</i></sup>)</li>
+					<li><a href="https://www.linkedin.com/in/stanleycen">linkedin</a></li>
 					<li><a href="mailto:hello@stanleycen.com">hello@stanleycen.com</a></li>
 				</ul>
 			</div>
