--- a/views/index.erb
+++ b/views/index.erb
@@ -151,13 +151,13 @@
 		</p>
 		<p>Anyways, outside of that kinda stuff, I really like music.
 		I've played the piano for most of my life, picked up guitar in college, and just recently
-		bought a ukelele! I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch">perfect pitch</a> (1 in ~10,000 people!) and love to play things I hear on the radio by ear.
-		I've also recently become really interested in music theory and compsition!
+		bought a ukelele! I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch">perfect pitch</a> and love to play things I hear on the radio by ear.
+		Sometimes I <a href="#">arrange</a> or <a href="#">compose</a> music.
 		</p>
 		<p>
-		I also like to take pictures from time to time. I shoot on a Nikon D5500 with a 35mm f/1.8 prime and 18-55mm f/3.5 zoom, as well as my Galaxy S6. I love the idea of using photos to capture memories forever, and I've
+		I also like to take pictures from time to time. I shoot on a Sony A6000 mirrorless with a Sony 35mm f/1.8 prime, (vintage) Minolta 50mm f/1.4 prime, and a 16-50mm f/3.5 zoom. I love the idea of using photos to capture memories &amp; moments forever, and I've
 		had a lot of fun improving upon what I learned in my high school photography class.
-		I hope to upload my photos onto the internet sometime in the future.
+		Someday, I hope to share my photos on the internet.
 		</p>
 		<div class="humanstxt">
 			<a href="/humans.txt"><img src="/img/logo-humans.png"/></a>
