some updates to the design

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,8 @@
 				</div>
 			</div>
 		</div>
-		<div id='scroll-notifier'>
-		</div>
+		<!-- <div id='scroll-notifier'>
+		</div> -->
 </section>
 <section class="content-wrap" id="about">
 	<div class="body-text">
@@ -20,7 +20,7 @@
 		<p>I've explored and learned a whole lot since then.
 		In terms of CS, I've tried just about everything I could get my hands on: game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning, security, and distributed systems.</p>
 
-		 <p>Here are some notable things I've accomplished as a software engineer:</p>
+		 <p>Here are some computer science-y things I've done:</p>
 	</div>
 	<div class="timeline-wrap">
 		<ul class="timeline">
