--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 			<div class="masthead-home-tagline">
 				<div class>
 					<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-					<h1 class="animated slideInDown">i'm <strong>stanley</strong>, a junior @ mit studying music &amp; computer science.</h1>
+					<h1 class="animated slideInDown">i'm <strong>stanley</strong>, a senior @ mit studying music &amp; computer science.</h1>
 				</div>
 			</div>
 		</div>
@@ -14,7 +14,7 @@
 <section class="content-wrap" id="about">
 	<div class="body-text">
 		<h1>Who am I?</h1>
-		<p>I'm a junior at the Massachusetts Institute of Technology working towards a major in Computer Science and a minor in Music.
+		<p>I'm a senior at the Massachusetts Institute of Technology working towards a major in Computer Science and a minor in Music.
 		I've spent the better part of my life (10+ years and counting!) pursuing both passions, and I don't plan on slowing down anytime soon.</p>
 
 		<p>I've explored and learned a whole lot since then.
@@ -155,9 +155,8 @@
 		Sometimes I <a href="#">arrange</a> or <a href="#">compose</a> music.
 		</p>
 		<p>
-		I also like to take pictures from time to time. I shoot on a Sony A6000 mirrorless with a Sony 35mm f/1.8 prime, (vintage) Minolta 50mm f/1.4 prime, and a 16-50mm f/3.5 zoom. I love the idea of using photos to capture memories &amp; moments forever, and I've
+		I also like to take pictures from time to time. I shoot on a Sony A6000 mirrorless with a Sony 35mm f/1.8 prime, (vintage) Minolta 50mm f/1.4 prime, and a Rokinon 12mm f/2.0 prime. I love the idea of using photos to capture memories &amp; moments forever, and I've
 		had a lot of fun improving upon what I learned in my high school photography class.
-		Someday, I hope to share my photos on the internet.
 		</p>
 		<div class="humanstxt">
 			<a href="/humans.txt"><img src="/img/logo-humans.png"/></a>
