--- a/views/index.erb
+++ b/views/index.erb
@@ -9,16 +9,43 @@
 			</div>
 		</div>
 </section>
-<section class="content-wrap" id="about">
+<section class="content-wrap" id="about1">
 	<div class="body-text">
 		<h1>Who am I?</h1>
-		<p>I'm a senior at the Massachusetts Institute of Technology working towards a major in Computer Science and a minor in Music.
-		I've spent the better part of my life (10+ years and counting!) pursuing both passions, and I don't plan on slowing down anytime soon.</p>
+		<p>
+		I'm a senior at the Massachusetts Institute of Technology, working towards a major in Computer Science
+		with a minor in Music (concentrating in theory &amp; composition).
+		</p>
 
-		<p>I've explored and learned a whole lot since then.
-		In terms of CS, I've tried just about everything I could get my hands on: game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning, security, and distributed systems.</p>
+		<p>
+		<b>Music keeps me sane&hellip;</b> I've played the piano for most of my life, and one of my favorite
+		pastimes is simply closing my eyes and letting my fingers improvise.
+		But sometimes, I <a href="#">arrange</a> or <a href="#">compose</a> music.
+		picked up guitar in college, and just recently
+		bought a ukelele! A favorite pastime of mine involves sitting down at a piano
+		and noodling around for hours on end.
+		</p>
 
-		 <p>Here are some computer science-y things I've done:</p>
+		<p>
+		<b>&hellip;but what I love most is exploring the outdoors.</b>
+		I'm addicted. There's nothing more satisfying than
+		being out there, armed with nothing but the contents of my backpack.
+		The sunsets&hellip; the stars&hellip; the solitude&hellip;
+		I can't resist.
+		</p>
+	</div>
+</section>
+<section id="divider" class='parallax-wrap'>
+	<div class="divide-img"></div>
+</section>
+<section class="content-wrap" id="about2">
+	<div class="body-text">
+		<p>
+		<b>I also like to take pictures from time to time.</b>
+		I shoot on a Sony A6000 mirrorless with a Sony 35mm f/1.8 prime, (vintage) Minolta 50mm f/1.4 prime, and a Rokinon 12mm f/2.0 prime.
+		</p>
+
+		<p>I guess computers are pretty cool too. Here are some things that I've done:</p>
 	</div>
 	<div class="timeline-wrap">
 		<ul class="timeline">
@@ -144,18 +171,6 @@
 		</ul>
 	</div>
 	<div class="body-text">
-		<p>Like what you see? I'm always looking for cool opportunities. I'd love to <a href="#contact" id='contact-hear'>hear</a> from
-		you!
-		</p>
-		<p>Anyways, outside of that kinda stuff, I really like music.
-		I've played the piano for most of my life, picked up guitar in college, and just recently
-		bought a ukelele! I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch">perfect pitch</a> and love to play things I hear on the radio by ear.
-		Sometimes I <a href="#">arrange</a> or <a href="#">compose</a> music.
-		</p>
-		<p>
-		I also like to take pictures from time to time. I shoot on a Sony A6000 mirrorless with a Sony 35mm f/1.8 prime, (vintage) Minolta 50mm f/1.4 prime, and a Rokinon 12mm f/2.0 prime. I love the idea of using photos to capture memories &amp; moments forever, and I've
-		had a lot of fun improving upon what I learned in my high school photography class.
-		</p>
 		<div class="humanstxt">
 			<a href="/humans.txt"><img src="/img/logo-humans.png"/></a>
 		</div>
@@ -166,7 +181,7 @@
 	<div class="stuff">
 		<div class="wrap">
 			<div class='body-text'>
-				<h1>Let's get in touch! Simply fill this out&hellip;</h1>
+				<h1>Drop me a line! Just fill this out&hellip;</h1>
 				<div id="contact_form">
 					<form>
 						<input type="hidden" name="salt" id="salt" />
