--- a/views/nav.erb
+++ b/views/nav.erb
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="<%= @nav == 'home' ? '#about' : '/#about'%>" class="<%= get_nav_classes 'about' %>">about</a></li>
         <li><a href="/blog" class="<%= get_nav_classes 'blog' %>">blog</a></li>
+        <li><a href="#" class="<%= get_nav_classes 'hiking' %>">hiking</a></li>
         <li><a href="#" class="<%= get_nav_classes 'music' %>">music</a></li>
         <li><a href="#" class="<%= get_nav_classes 'photography' %>">photography</a></li>
         <li><a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>" class="<%= get_nav_classes 'contact' %>">contact</a></li>
