--- a/source/blog/2013-09-02-facebook-messaging-analytics-android.html.markdown.erb
+++ b/source/blog/2013-09-02-facebook-messaging-analytics-android.html.markdown.erb
@@ -1,23 +1,75 @@
 ---
 
-title: Android Facebook Messaging Analytics
+title: Facebook messaging analytics for Android
 tags:
 
 ---
 
 For the past five days I've been working on an open source Android application for
-analyzing your Facebook messaging data. I tried to follow the Android UI guidelines
+analyzing your Facebook messaging data.
+READMORE
+
+This is a mobile version of the web app [here](http://github.com/scen/fbstats).
+
+I tried to follow the Android UI guidelines
 as closely as possible and even emulated Google's new card interface! Here's a couple of screenshots:
 
-<div class="photo" width="300" cloudinary src="a_z1rgtr.png">Daytime activity</div>
-
-<div class="photo" width="300" cloudinary src="i_wpqqr4.png">Overview card</div>
-<div class="photo" width="300" cloudinary src="c_dbse7z.png">Character distribution</div>
-<div class="photo" width="300" cloudinary src="d_h6d0pn.png">Most active days</div>
-<div class="photo" width="300" cloudinary src="e_qk9d0s.png">Activity at night</div>
-<div class="photo" width="300" cloudinary src="f_eiuuoq.png">Message trends over time</div>
-<div class="photo" width="300" cloudinary src="g_ffy6cr.png">More trends over time</div>
-<div class="photo" width="300" cloudinary src="h_vduduk.png">Mobile activity</div>
+<%=
+image(
+    :cloudinary => 'a_z1rgtr.png',
+    :caption => 'Daytime activity',
+    :width => 300,
+)
+%>
+<%=
+image(
+    :cloudinary => 'i_wpqqr4.png',
+    :caption => 'Overview card',
+    :width => 300,
+)
+%>
+<%=
+image(
+    :cloudinary => 'c_dbse7z.png',
+    :caption => 'Character distribution',
+    :width => 300,
+)
+%>
+<%=
+image(
+    :cloudinary => 'd_h6d0pn.png',
+    :caption => 'Most active days',
+    :width => 300,
+)
+%>
+<%=
+image(
+    :cloudinary => 'e_qk9d0s.png',
+    :caption => 'Activity at night',
+    :width => 300,
+)
+%>
+<%=
+image(
+    :cloudinary => 'f_eiuuoq.png',
+    :caption => 'Message trends over time',
+    :width => 300,
+)
+%>
+<%=
+image(
+    :cloudinary => 'g_ffy6cr.png',
+    :caption => 'More trends over time',
+    :width => 300,
+)
+%>
+<%=
+image(
+    :cloudinary => 'h_vduduk.png',
+    :caption => 'Mobile activity',
+    :width => 300,
+)
+%>
 
 ### Technical details
 
