--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,20 +24,23 @@ header_img: /img/home/header2.jpg
     </p>
 
     <p>
-    <b>Music keeps me sane&hellip;</b> I've played the piano for most of my life, and one of my favorite
-    pastimes is simply closing my eyes and letting my fingers improvise.
-    But sometimes, I <a href="#">arrange</a> or <a href="#">compose</a> music.
-    picked up guitar in college, and just recently
-    bought a ukelele! A favorite pastime of mine involves sitting down at a piano
-    and noodling around for hours on end.
+    <b>Music keeps me sane&hellip;</b> I've played the piano for most of my life,
+    and I love to improvise. I'm currently trying to learn to
+    incorporate more jazz elements into my playing.
+    Sometimes, I <a href="#">arrange</a> or <a href="#">compose</a> music.
+    Other times, I noodle around on my guitar or ukelele.
     </p>
 
-    <p class="no-margin-bottom">
+    <p class>
     <b>&hellip;but what I love most is exploring the outdoors.</b>
-    I'm addicted. There's nothing more satisfying than
-    being out there, armed with nothing but the contents of my backpack.
-    The sunsets&hellip; the stars&hellip; the solitude&hellip;
-    I can't resist.
+    I'm addicted. There's nothing more satisfying and liberating than
+    being out in the wilderness, relying on nothing but the contents of my backpack.
+    I recently started a <a href="/hikes">trip journal</a>. It's mostly
+    to help me keep track of everything, but I hope others find it useful!
+    </p>
+    <p class="no-margin-bottom">
+    I have a lot of stuff on my bucket list. One day I hope to hike the John Muir Trail.
+    I hope to climb a mountain. I hope to hike to Everest Base Camp.
     </p>
   </div>
 </section>
