--- a/source/photography.html.erb
+++ b/source/photography.html.erb
@@ -1,15 +1,15 @@
 ---
-title: "Blog"
+title: Photography
 ---
+
 <section id="masthead" class="parallax-wrap">
     <div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
     <div class="parallax-content">
         <div class="blog-list-masthead">
             <div class>
-                <h1 class="">blog.</h1>
-                <h4 class=""><em>&ldquo;i&rsquo;m significant!&hellip; screamed the dust speck.&rdquo; &mdash; calvin &amp; hobbes</em></h3>
+                <h1 class="">photography.</h1>
+                <h4 class=""><em>under construction&hellip;</em></h3>
             </div>
         </div>
     </div>
 </section>
-<%= partial(:list_blog_posts, :locals => {:blog => :blog}) %>
